Image max width to prevent overflow

--- a/sass/canvol.scss
+++ b/sass/canvol.scss
@@ -400,6 +400,12 @@ img::-moz-selection {
 @media(max-width:767px){
     .howcanvolworks
     {
+        text-align: center;
         margin-top: 100px;
+    }
+
+    .hcw-image-block img
+    {
+        max-width: 100%;
     }
 }
